added ability for user to abandon order without quitting program

--- a/Planning_site_fruitbowl/Index.html
+++ b/Planning_site_fruitbowl/Index.html
@@ -316,8 +316,20 @@
 			<img class="img-responsive" src="/Planning_site_fruitbowl/assets/img/Error17_error.png" alt="another error with error 17 fix.">
 			<p>This error doesn't prevent the program from running, but if I were to do any more work on this program, this would be an error I should fix.</p>
 			<h3>Conclusion for these sprints:</h3>
-			<p>In sprints 14 and 15, I made sure all parts where the user can interact with the program are validated, so that the program doesn't react improperly to unexpected user inputs. I successfully validated most parts of my system, and successfully made it so that the user could choose whether or not they wanted to see the menu when placing sandwiches on their order. If I were to add anything more to my program, I would fix the issue where the 0 at the start of the phone number was missed out, and I would add the ability for past orders to be remembered (sales history remembered). There will always be more things that could be added to my program; more bugs to fix, more features I could add. However at this stage, my program is relatively developed. It is developed to the point that it is functional, and many errors have been fixed as I have shown throughout the multiple sprints.</p>
+			<p>In sprints 14 and 15, I made sure all parts where the user can interact with the program are validated, so that the program doesn't react improperly to unexpected user inputs. I successfully validated most parts of my system, and successfully made it so that the user could choose whether they wanted to see the menu when placing sandwiches on their order. If I were to add anything more to my program, I would fix the issue where the 0 at the start of the phone number was missed out, and I would add the ability for past orders to be remembered (sales history remembered). There will always be more things that could be added to my program; more bugs to fix, more features I could add. However at this stage, my program is relatively developed. It is developed to the point that it is functional, and many errors have been fixed as I have shown throughout the multiple sprints.</p>
 			<br>
+			<h3>Extra addition:</h3>
+			<p>I made it so that the abandon feature is its own function, and made it so that it doesn't quit the program like it used to but instead lets the user create a new order. Here is a photo of the code that will let the user abandon their current order and create a new one, or exit the program entirely if they so wish:</p>
+			<img class="img-responsive" src="/Planning_site_fruitbowl/assets/img/abandon_code.png" alt="abandon function">
+			<br>
+			<img class="img-responsive" src="/Planning_site_fruitbowl/assets/img/abandon_code1.png" alt="abandon function">
+			<p>Here is proof that the code worked:</p>
+			<img class="img-responsive" src="/Planning_site_fruitbowl/assets/img/abandon_proof.png" alt="abandon function works">
+			<br>
+			<img class="img-responsive" src="/Planning_site_fruitbowl/assets/img/abandon_proof1.png" alt="abandon function works">
+			<br>
+			<p>I had no major errors with this code (I forgot to set get_user_input to false, but I figured out that I'd done that immediately), it was pretty simple to code this function and add it in to my existing code.</p>
+			<hr>
 			<p>If I were to continue this project, I would first work on turning the validation into a separate function and I would prevent any zeros at the front of phone numbers from being disregarded.</p>
 			<p>Here is an image of my project board. It shows what large goals I have accomplished, and what I could do in the future to further improve the program:</p>
 			<img class="img-responsive" src="/Planning_site_fruitbowl/assets/img/Project_board.png" alt="Project board image.">
